fix booking overflow

--- a/css/style.css
+++ b/css/style.css
@@ -9236,6 +9236,9 @@ i {
   overflow-x: hidden;
   overflow: inherit; }
 
+.octobus__field #bothSide {
+  width: auto; }
+
 .directions {
   position: relative; }
   .directions h2 {
